--- a/databases/album-database/build.gradle
+++ b/databases/album-database/build.gradle
@@ -25,7 +25,7 @@ task openTunnel {
     doLast {
         println 'Opening Tunnel'
         Thread.start {
-            tunnelProcess = "cf ssh -N -L 63306:${getMysqlHost("album-service")}:3306 album-service".execute()
+            tunnelProcess = "cf ssh -N -L 63306:${getMysqlHost("album-service-gg")}:3306 album-service-gg".execute()
         }
 
         sleep 5_000L
@@ -41,7 +41,7 @@ task closeTunnel {
 
 task cfMigrate(type: FlywayMigrateTask, dependsOn: openTunnel) {
     if (System.env.CF_MIGRATE) {
-        extension = setupProdFlywayExtension(new FlywayExtension(), "album-service")
+        extension = setupProdFlywayExtension(new FlywayExtension(), "album-service-gg")
     }
 }
 
