--- a/manifest.yml
+++ b/manifest.yml
@@ -2,19 +2,27 @@
 memory: 1G
 instances: 1
 applications:
-- name: album-service
+- name: album-service-gg
   path: applications/album-service/build/libs/album-service-1.1.0-SNAPSHOT.jar
   services:
   - album-database
   - moviefun-s3
-- name: movie-service
+  - movie-fun-sso
+  env:
+    GRANT_TYPE: client_credentials
+- name: movie-service-gg
   path: applications/movie-service/build/libs/movie-service-1.1.0-SNAPSHOT.jar
   services:
   - movie-database
-- name: movie-fun-app
+  - movie-fun-sso
+  env:
+    GRANT_TYPE: client_credentials
+- name: movie-fun-app-gg
   path: applications/movie-fun-app/build/libs/movie-fun-app-1.1.0-SNAPSHOT.war
   services:
   - moviefun-s3
+  - movie-fun-sso
   env:
-    ALBUMS_URL: http://album-service.cfapps-02.haas-66.pez.pivotal.io/albums
-    MOVIES_URL: http://movie-service.cfapps-02.haas-66.pez.pivotal.io/movies
+    ALBUMS_URL: http://album-service-gg.apps.longs.pal.pivotal.io/albums
+    MOVIES_URL: http://movie-service-gg.apps.longs.pal.pivotal.io/movies
+    GRANT_TYPE: authorization_code
