--- a/applications/movie-fun-app/src/main/resources/application.yml
+++ b/applications/movie-fun-app/src/main/resources/application.yml
@@ -2,7 +2,8 @@ spring:
   mvc.view:
     prefix: /WEB-INF/
     suffix: .jsp
-
+  application:
+    name: movie-fun-app
 logging.level:
   root: WARN
   org.superbiz.moviefun: DEBUG
@@ -20,3 +21,6 @@ movies:
 security:
   basic:
     enabled: false
+
+env:
+  application.oauth-enabled=false
