--- a/manifest.yml
+++ b/manifest.yml
@@ -9,18 +9,24 @@ applications:
   services:
   - album-database
   - moviefun-s3
+  - movie-fun-registry
   env:
     GRANT_TYPE: client_credentials
+  routes:
+  - route: album-service-gg.apps.longs.pal.pivotal.io
 - name: movie-service
   path: applications/movie-service/build/libs/movie-service-1.1.0-SNAPSHOT.jar
   services:
   - movie-database
+  - movie-fun-registry
   env:
     GRANT_TYPE: client_credentials
+  routes:
+  - route: movie-service-gg.apps.longs.pal.pivotal.io
 - name: movie-fun-app
   path: applications/movie-fun-app/build/libs/movie-fun-app-1.1.0-SNAPSHOT.war
   services:
   - moviefun-s3
-  env:
-    ALBUMS_URL: http://album-service.cfapps-02.haas-66.pez.pivotal.io/albums
-    MOVIES_URL: http://movie-service.cfapps-02.haas-66.pez.pivotal.io/movies
+  - movie-fun-registry
+  routes:
+  - route: movie-fun-app-gg.apps.longs.pal.pivotal.io
